# pytest-mark-manage

./: README.md  pyproject.toml
pytest_mark_manage/: __init__.py  __version__.py  conf.py  plugin.py  skipif.py
