[project]
name = "pytest-mark-manage"
description = "用例标签化管理"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "pytest",
    "funnylog2",
]
dynamic = [
    "version",
]

requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[project.scripts]

[project.entry-points.pytest11]
pytest-mark-manage = "pytest_mark_manage.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "pytest_mark_manage/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/pytest_mark_manage",
]

